# IRCamera

./: .copilotignore  .coverage  .coveragerc  .editorconfig  .eslintrc.js  .flake8  .formatting_config.yml  .gitattributes  .gitignore  .ktlintrc  .optimizer_config.json  .output.txt  .output2.txt  .pre-commit-config.yaml  .quality_history.db  ACTIVITY_CONSOLIDATION_PLAN.md  ACTIVITY_CONSOLIDATION_SUMMARY.md  ADVANCED_BLE_INTEGRATION_CONTINUATION.md  ADVANCED_GSR_ANALYTICS_ENHANCEMENT.md  ADVANCED_LINTING_DOCUMENTATION.md  ANDROID_ARCHITECTURE_RECOMMENDATIONS.md  ANDROID_BUILD_STATUS.md  ANTIPATTERN_ANALYSIS_README.md  ANTIPATTERN_ANALYSIS_SUMMARY.md  ARCHITECTURE_MIGRATION_PLAN.md  BACKLOG.md  BIDIRECTIONAL_NETWORKING_README.md  BLE_HARMONIZATION_PLAN.md  BLE_HARMONIZATION_TEST.kt  BUILD_CONSOLIDATION_GUIDE.md  BUILD_INSTRUCTIONS.md  CAMERA_NETWORK_COMPOSE_MIGRATION.md  CAMERA_STRUCTURE_OPTIMIZATION.md  CHANGELOG.md  CHAPTER4_DOCUMENTATION_SUMMARY.md  CLASS_SPECIFIC_ANTIPATTERNS.md  CLEANUP_SUMMARY.md  CLEAN_CAMERA2_IMPLEMENTATION_COMPLETE.md  CODE_ANTIPATTERNS_ANALYSIS.md  CODE_REDUNDANCY_ANALYSIS.md  (+239 more)
.gemini/: config.yaml
.github/: copilot-instructions.md
BleModule/: BleModule_merged.kt  build.gradle.kts  consumer-rules.pro
RangeSeekBar/: build.gradle.kts
app/: build.gradle.kts  lint-baseline.xml  lint.xml  proguard-rules.pro
ble-core/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ble-shimmer/: build.gradle.kts  proguard-rules.pro
ble-topdon/: build.gradle.kts  proguard-rules.pro
component/: common-component.gradle.kts  component_merged.kt
consolidated_libraries/: README.md
demos/: README.md  demo_networking.py
docs/: ADVANCED_ANALYTICS_VISUALIZATION.md  ADVANCED_API_DOCUMENTATION.md  ANDROIDX_ALTERNATIVES_TO_UTILCODE.md  ANR_FIX_SUMMARY.md  ANR_PREVENTION_GUIDE.md  ANTI_PATTERNS_ACTION_PLAN.md  ANTI_PATTERNS_ANALYSIS.md  ANTI_PATTERNS_CHECKLIST.md  ANTI_PATTERNS_README.md  API_REFERENCE.md  APP_LAYOUT_DIAGRAM.md  APP_NAVIGATION_DIAGRAM.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_DIAGRAM_SUMMARY.md  ARCHITECTURE_REORGANIZATION.md  BACKGROUND_DEVICE_SCANNING.md  BACKLOG.md  BUILD_ISSUES_STATUS.md  CHANGELOG_MVVM_IMPROVEMENTS.md  CODE_FORMATTING.md  COMPOSE_MIGRATION_VALIDATION.md  COMPREHENSIVE_ARCHITECTURE_DIAGRAMS.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  ComposeGuide.md  ComposeTransitionGuide.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENHANCED_HUB_SPOKE_INTEGRATION.md  ENTERPRISE_INTEGRATION.md  FIXES_APPLIED.md  INDEX.md  INTEGRATION_GUIDE_STAGE3.md  INTEGRATION_PATTERNS.md  IconConversionComplete.md  IconMigrationSummary.md  LAYOUT_ACTIVITY_AUDIT.md  (+89 more)
gradle/: libs.versions.toml
libapp/: build.gradle.kts  lint.xml
libcom/: build.gradle.kts
libcore/: build.gradle.kts  proguard-rules.pro
libhik/: build.gradle.kts
libir/: build.gradle.kts  consumer-rules.pro
libmatrix/: build.gradle.kts
libmenu/: build.gradle.kts
libui/: build.gradle.kts
libunified/: PERMISSION_HANDLING.md  build.gradle.kts  consumer-rules.pro  libunified_merged.kt  proguard-rules.pro
migration_backup_20250902_153037/: AbilityFragment.kt  AutoSaveActivity.kt  BaseIRPlushActivity.kt  BaseIRPlushFragment.kt  BasePickImgActivity.kt  CameraPreView.kt  CarDetectDialog.kt  ChartActivity.kt  ClauseActivity.kt  ColorPickDialog.kt  ColorSelectAdapter.kt  ColorSelectDialog.kt  ConfigEmAdapter.kt  ConfigGuideDialog.kt  ConfirmSelectDialog.kt  ConnectActivity.kt  ConnectTipsActivity.kt  DColorSelectAdapter.kt  DetectAddActivity.kt  DetectListFragment.kt  DeviceAddActivity.kt  DeviceDetailsActivity.kt  DeviceTypeActivity.kt  DirEditActivity.kt  DownloadProDialog.kt  ElectronicManualActivity.kt  EmissivityTipPopup.kt  FirmwareUpDialog.kt  GalleryActivity.kt  GalleryAdapter.kt  GalleryChangePopup.kt  GalleryEditMenuAdapter.kt  GalleryFragment.kt  GalleryPictureFragment.kt  GalleryVideoFragment.kt  HomeGuideDialog.kt  HouseAdapter.kt  HouseDetectView.kt  HouseHomeActivity.kt  IR07MonitorCapture1Activity.kt  (+138 more)
mvp/: MVP_DEPLOYMENT_GUIDE.md
pc-controller/: =0.7.0  BUILD.md  CODE_REVIEW.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_SUMMARY.txt  CONTINUED_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_READY.md  OVER_ENGINEERED_ANALYSIS.md  PROTOCOL_FLOW.txt  PROTOCOL_VERIFICATION_README.md  PROTOCOL_VERIFICATION_REPORT.md  PR_SUMMARY.md  QUICK_START.md  README.md  README_ADVANCED.md  README_Enhanced.md  README_MVP.md  README_SIMPLIFIED.md  README_UNIFIED.md  REORGANIZATION_SUMMARY.md  VERIFICATION_COMPLETE.md  advanced_ai_engine.py  advanced_pc_controller.py  camera_integration.py  command_client.py  comprehensive_benchmark_test.py  comprehensive_validation.py  config.yaml  connect_to_android.sh  current_packages.txt  data_export_pipeline.py  demo.py  demo_complete_system.py  demo_features.py  demo_mvp_components.py  enhanced_demo.py  enhanced_networking_demo.py  enhanced_pc_controller.py  enhanced_tcp_server.py  (+83 more)
pc-controller-ui/: README.md  README_ADVANCED.md  README_UNIFIED.md  demo_features.py  install_controller.sh  requirements.txt  run_controller.py  test_enhanced_controller.py  test_pc_controller.py
pc-controller/legacy_implementation/native_backend/: CMakeLists.txt
pc-controller/legacy_implementation/native_backend/include/: data_structures.h  lockfree_queue.h  native_shimmer.h  native_shimmer.hpp  native_webcam.h  native_webcam.hpp  thread_safe_queue.hpp
pc-controller/legacy_implementation/native_backend/src/: native_backend.cpp  native_shimmer.cpp  native_webcam.cpp  pybind_module.cpp  simple_pybind_module.cpp
pc-controller/native_backend/: CMakeLists.txt  setup.py
pc-controller/native_backend/include/: data_processor.h  data_structures.h  lockfree_queue.h  native_shimmer.h  native_shimmer.hpp  native_webcam.h  native_webcam.hpp  shimmer.h  thread_safe_queue.hpp
pc-controller/native_backend/src/: data_processor.cpp  native_backend.cpp  native_shimmer.cpp  native_webcam.cpp  pybind_module.cpp  shimmer.cpp  simple_pybind_module.cpp
scripts/: CONSOLIDATION_SUMMARY.md  test.sh  (+6 more)
(+9262 files in other folders)
